style: fix gaps and padding

--- a/src/app/components/header/components/navbar/navbar.component.css
+++ b/src/app/components/header/components/navbar/navbar.component.css
@@ -51,7 +51,6 @@ a {
   cursor: pointer;
 }
 
-/* Estilos responsivos */
 @media (max-width: 991px) {
   .nav-container {
     display: none;
@@ -63,5 +62,8 @@ a {
 
   .menu-button {
     display: block;
+  }
+  .logo {
+    font-size: 32px;
   }
 }
